--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -44,6 +44,7 @@ jobs:
           path: apps/web/dist
 
   deploy:
+    if: github.event.repository.has_pages == true
     runs-on: ubuntu-latest
     needs: build
     environment:
