Initial commit from your app

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,3 +2,7 @@ PORT=3000
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=redispass_Q6z9Bf82MpLmX4vw
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+DATABASE_TYPE=redis # redis ou supabase
